Fixing misalignment in mobile dashboard view

--- a/docroot/_diffs/css/custom_responsive.css
+++ b/docroot/_diffs/css/custom_responsive.css
@@ -51,7 +51,7 @@
 	}
 
 	.aui .dashboard {
-		#wrapper {
+		#content {
 			margin-left: 0;
 		}
 
